# NeuralBridge_mcp

./: .claudeignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  mcp-tool.ts
.github/: PULL_REQUEST_TEMPLATE.md  azure-pipelines.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android-build.yml  release.yml  test.yml
android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jpeg_encoder.cpp
android/app/src/main/res/anim/: fade_through_wave.xml  wave_enter.xml  wave_flow.xml  wave_pulse.xml
android/app/src/main/res/drawable/: bg_card_wave.xml  bg_header_gradient.xml  bg_permission_progress.xml  bg_splash.xml  bg_status_dot.xml  btn_wave_outlined.xml  btn_wave_primary.xml  divider_wave.xml  ic_flow_indicator.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_wave_accent_small.xml  progress_wave.xml  selector_wave_item.xml  separator_flow.xml
android/app/src/main/res/layout/: activity_main.xml  header_gradient.xml  item_log_entry.xml  item_permission_card.xml  tab_logs.xml  tab_setup.xml  tab_status.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
android/app/src/main/res/values/: colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  styles.xml  themes.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
android/design/: design-options.html  generate-icons.js  generate-icons.sh  icon-showcase.html  package.json
android/design/icon-alternatives/: alt2-bridge-signal.html  implementation.html  index.html  styles.css
android/proto/: neuralbridge.proto
app/src/main/: AndroidManifest.xml  build.gradle.kts
app/src/main/java/com/neuralbridge/: NexaBridge.kt
companion-app/: build.gradle.kts
companion-app/app/: build.gradle.kts
companion-app/app/src/main/: AndroidManifest.xml
companion-app/app/src/main/res/anim/: connection_wave.xml  wave_exit.xml
companion-app/app/src/main/res/drawable/: bg_splash.xml  bg_tab_indicator.xml  bg_wave_pattern.xml  btn_wave_primary.xml  ic_launcher_background.xml  ic_notification.xml  loading_pulse.xml  progress_wave.xml
companion-app/app/src/main/res/layout/: header_gradient.xml  item_permission_card.xml  tab_logs.xml  tab_setup.xml  tab_status.xml
companion-app/design/: ANIMATION_SYSTEM.md  BUILD_VERIFICATION_REPORT.md  DESIGN_SYSTEM.md  DEVELOPER_GUIDE.md  ICON_RESOURCES.md  THEME_IMPLEMENTATION.md  generate-icons.js  generate-icons.sh  icon-showcase.html
companion-app/design/icon-alternatives/: alt1-neural-wave.html  alt3-ai-pulse.html  implementation.html
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DISTRIBUTION.md  PERFORMANCE.md  TOOLS.md  TROUBLESHOOTING.md  index.html  product-manual.html  token-optimization.md
docs/plans/: android-native-mcp-http.md  phase3-features-plan.md
examples/: mcp_client.py
mcp-server/: Cargo.toml  README.md
mcp-server/src/: lib.rs  main.rs
mcp-server/src/device/: adb.rs  manager.rs  mod.rs  pool.rs
mcp-server/src/protocol/: codec.rs  connection.rs
mcp-server/src/semantic/: resolver.rs  selector.rs
mcp-server/src/tools/: act.rs  mod.rs  observe.rs  wait.rs
mcp-server/tests/: event_debug.rs  integration_tests.rs
python-demo/: README.md  run_all_scenarios.py  test_connection.py  test_scenario1.py
python-demo/demo_client/: main.py  mcp_client.py
scripts/: README.md  install.ps1  install.sh
tests/: crestron_home_test.py
(+42 files in other folders)
