[package]
name = "neuralbridge-mcp"
version = "0.1.0"
edition = "2021"
authors = ["NeuralBridge Team"]
description = "MCP server for AI-native Android automation"
license = "MIT"

[dependencies]
# MCP SDK - requires server + transport-io for stdio, macros for #[tool]
rmcp = { version = "0.15", features = ["server", "transport-io", "macros"] }
schemars = { version = "1.0", features = ["chrono04"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Protobuf serialization
prost = "0.12"
prost-types = "0.12"
bytes = "1.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[build-dependencies]
prost-build = "0.12"

[lib]
name = "neuralbridge_mcp"
path = "src/lib.rs"

[[bin]]
name = "neuralbridge-mcp"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
